-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.8.1
-
None
-
-
79aa4269b (dev), 1a737083f (6.9), 92e454c00 (6.8)
alternateBase in dark mode Win11 style is a darker version of the system's accent color, which is very confusing, as it looks like a selection. The light mode's alternate base is a light-grayish color, as expected.
This is Win11 Pro, 24H2, running in "light" mode.
Can easily be reproduced by adding treeView->setAlternatingRowColors(true); in the widget gallery example's widgetgallery.cpp file, line 330
(my system's accent color is set to blue)